2008-10-09  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Typo fixed.  Generate test harness HTML page.

2008-10-09  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: New script.

	* ChangeLog: New file.

